# flashcards-api-server

./: .buildinfo  .gitignore  Dockerfile  README.md  genindex.html  index.html  objects.inv  redoc.html  search.html  searchindex.js  setup.cfg  setup.py  spec.json
.github/workflows/: build_docs_and_redoc.sh  docs.yml  docs_and_redoc.yml  redoc.yml  tests.yml
docs/source/: conf.py  index.rst
flashcards_api/: algorithms.py  cards.py  constants.py  decks.py  facts.py  main.py  tags.py  utils.py
flashcards_server/: __init__.py  algorithms.py  app.py  cards.py  constants.py  database.py  decks.py  facts.py  main.py  models.py  tags.py  users.py  utils.py
flashcards_server/api/: __init__.py  algorithms.py  auth.py  cards.py  decks.py  facts.py  study.py  tags.py  token.py
flashcards_server/api/auth/: __init__.py  api.py  functions.py  models.py
flashcards_server/api/users/: __init__.py  api.py  functions.py  models.py
flashcards_server/auth/: __init__.py  api.py  cookies.py  functions.py  models.py  schemas.py
flashcards_server/core_api/: algorithms.py  cards.py  decks.py  facts.py  tags.py
tests/: conftest.py  test_algorithms.py  test_main.py
