[metadata]
name = flashcards-server
version = 0.0.1
author = Sara Zanzottera
description = FastAPI backend for `flashcards-core`, a library for flashcards and spaced repetition applications
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ebisu-flashcards/flashcards-server
project_urls =
    Homepage = https://github.com/ebisu-flashcards/flashcards-server
    Bug Tracker = https://github.com/ebisu-flashcards/flashcards-server/issues
    Documentation = https://ebisu-flashcards.github.io/flashcards-server/
    Changelog = https://github.com/ebisu-flashcards/flashcards-server/releases

keywords = ["flashcards", "srs", "study"]

classifiers =
    Development Status :: 4 - Beta,
    Intended Audience :: Developers,
    License :: OSI Approved :: AGPLv3 License,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3 :: Only,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,

[options]
python_requires = >=3.6, <4
install_requires =
    #flashcards-core   # Once published on PyPi
    fastapi==0.67.0
    pydantic==1.8.2
    uvicorn[standard]==0.14.0
    python-multipart==0.0.5  # Support for form-multipart in FastAPI
    python-jose[cryptography]==3.3.0  # Support for JWT in FastAPI
    passlib[bcrypt]==1.7.4  # Support for JWT in FastAPI

[options.extras_require]
dev = 
    pytest==6.2.4
    pytest-cov==2.12.1
    pytest-random-order==1.0.4
    freezegun==1.1.0  # Mock datetime objects
    pre-commit==2.13.0
    black==21.7b0
    flake8==3.9.2
    coveralls==3.2.0
    sphinx==4.1.2
    sphinx-rtd-theme==0.5.2
    m2r2==0.3.1  # Render included Markdown in Sphinx
    docutils==0.15  # Temporary fix for bullet points

[options.entry_points]
console_scripts =
    generate-redoc = flashcards_server.utils.generate_redoc:generate_redoc

[flake8]
max-line-length = 99
exclude = .git, __pycache__
max-complexity = 10
select=C,E,F,W
ignore=W503,W504

[tool:pytest]
log_cli = 1
log_cli_level = DEBUG
